// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DefaultAppLayout /> > hides BackgroundTaskDisplay when StreamingState is WaitingForConfirmation 1`] = `
"MainContent
Notifications
CopyModeWarning
Composer
ExitWarning
"
`;

exports[`<DefaultAppLayout /> > renders BackgroundTaskDisplay when shells exist and active 1`] = `
"MainContent
BackgroundTaskDisplay




Notifications
CopyModeWarning
Composer
ExitWarning
"
`;

exports[`<DefaultAppLayout /> > shows BackgroundTaskDisplay when StreamingState is NOT WaitingForConfirmation 1`] = `
"MainContent
BackgroundTaskDisplay




Notifications
CopyModeWarning
Composer
ExitWarning
"
`;
